--- a/_layouts/mypost.html
+++ b/_layouts/mypost.html
@@ -16,6 +16,7 @@
     {% include ext-adsense.html -%}
   </div>
   {% endif %}
+  {% include gittalk.html -%}
 </div>
 {% include footer.html -%}
 {% include script.html -%}
