--- a/_layouts/gittalk.html
+++ b/_layouts/gittalk.html
@@ -1,4 +1,4 @@
-{%- if site.ext_gittalk == "true" %}
+{%- if site.ext_gittalk %}
   <div id="gitalk-container"></div>
   <script>
     const gitalk = new Gitalk({
