--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,7 +32,7 @@
   <link rel="prefetch" href="{{site.baseurl}}/static/xml/search.xml?t={{ buildAt }}">
   <link rel="prefetch" href="{{site.baseurl}}/static/js/search.js?t={{ buildAt }}">
   
-  {%- if site.ext_gittalk == "true" %}
+  {%- if site.ext_gittalk %}
   <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css?t={{ buildAt }}">
   <script src="https://unpkg.com/gitalk/dist/gitalk.min.js?t={{ buildAt }}"></script>
   {%- endif %}
