--- a/_includes/gittalk.html
+++ b/_includes/gittalk.html
@@ -1,6 +1,8 @@
 {%- if site.ext_gittalk -%}
+  <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
+  <script src="https://unpkg.com/gitalk/dist/gitalk.min.js"></script>
   <div id="gitalk-container"></div>
-  <script>
+  <script type="text/javascript">
     const gitalk = new Gitalk({
       clientID: "{{site.gittalk_client_id}}",
       clientSecret: "{{site.gittalk_client_secret}}",
