--- a/_includes/gittalk.html
+++ b/_includes/gittalk.html
@@ -1,17 +1,17 @@
-{%- if site.ext_gittalk -%}
+{%- if site.gitalk_enable -%}
   <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
   <script src="https://unpkg.com/gitalk/dist/gitalk.min.js"></script>
   <div id="gitalk-container"></div>
   <script type="text/javascript">
     const gitalk = new Gitalk({
-      clientID: "{{site.gittalk_client_id}}",
-      clientSecret: "{{site.gittalk_client_secret}}",
-      repo: "{{site.gittalk_repo}}",
-      owner: "{{site.gittalk_owner}}",
-      admin: ["{{site.gittalk_admin}}"],
+      clientID: "{{site.gitalk_client_id}}",
+      clientSecret: "{{site.gitalk_client_secret}}",
+      repo: "{{site.gitalk_repo}}",
+      owner: "{{site.gitalk_owner}}",
+      admin: ["{{site.gitalk_admin}}"],
       id: location.pathname,
       distractionFreeMode: false
-    })
-    gitalk.render('gitalk-container')
+    });
+    gitalk.render('gitalk-container');
   </script>
 {%- endif -%}
