--- a/_layouts/mypost.html
+++ b/_layouts/mypost.html
@@ -4,7 +4,7 @@
 <body ondragstart="return false;">
 {% include header.html -%}
 <div class="page page-post">
-  <h1 class="title" id="{{ page.route }}">{{ page.title }}</h1>
+  <h1 class="title" id="{{ page.key }}">{{ page.title }}</h1>
   {% if page.date %}
   <div class="subtitle">{{ page.author }} 于 {{ page.date | date: "%Y-%m-%d" }} 发布</div>
   {% endif %}
