--- a/_includes/gitalk.html
+++ b/_includes/gitalk.html
@@ -1,6 +1,6 @@
 {%- if site.gitalk_enable -%}
-  <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
-  <script src="https://unpkg.com/gitalk/dist/gitalk.min.js"></script>
+  <link rel="stylesheet" href="{{site.baseurl}}/static/css/gitalk.css?t={{buildAt}}">
+  <script src="{{site.baseurl}}/static/js/gitalk.min.js?t={{buildAt}}"></script>
   <div id="gitalk-container"></div>
   <script type="text/javascript">
     const gitalk = new Gitalk({
