--- a/static/css/gitalk.css
+++ b/static/css/gitalk.css
@@ -963,6 +963,7 @@
   margin: 0 0.9375em 0.5em;
   border-top: 1px solid #e9e9e9;
   padding-top: 0.5em;
+  display: none;
 }
 .gt-container .gt-popup {
   position: absolute;
