--- a/_includes/gitalk.html
+++ b/_includes/gitalk.html
@@ -1,4 +1,4 @@
-{%- if site.gitalk_enable -%}
+{%- if site.gitalk_enable && page.enableComments -%}
   <link rel="stylesheet" href="{{site.baseurl}}/static/css/gitalk.css?t={{buildAt}}">
   <script src="{{site.baseurl}}/static/js/gitalk.min.js?t={{buildAt}}"></script>
   <div id="gitalk-container"></div>
