--- a/static/css/kr.css
+++ b/static/css/kr.css
@@ -22,123 +22,147 @@ body::before {
 }
 
 /* ====================
+ container
+==================== */
+
+.l-Container {
+    padding-top: 24px;
+    width: 960px;
+}
+@media screen and (max-width: 768px) {
+    .l-Container {
+        padding: 24px;
+        width: 100%;
+    }
+} 
+
+.Collection__Wrapper{
+    padding-top: 35px;
+    padding-bottom: 65px;
+}
+
+.p-Heading--sub:nth-of-type(1){
+    margin-top: 30px;
+}
+
+/* ====================
  Collection
 ==================== */
 
-[class*="Collection-Card"]:not([class*="Collection-Card-"]) {
+[class*="Collection__Card"]:not([class*="Collection__Card__"]) {
     position: relative;
     width: 211px;
     margin-bottom: 30px;
 }
-
-.Collection-Card-ImgGroup {
+.Collection__Card__ImgGroup {
     position: relative;
     width: 211px;
     height: 285px;
+    /* margin-bottom: 10px; */
     background-color: rgba(255, 255, 255, 0.1);
     overflow: hidden;
     border-radius: 4px;
     box-shadow: 0px 10px 15px #0000004D;
 }
-.Collection-Card-ImgGroup a{
+.Collection__Card__ImgGroup a{
     display: block;
     position: absolute;
     width: 100%;
     height: 100%;
 }
-.Collection-Card-Img {
+.Collection__Card__Img {
     display: block;
     object-fit: cover;
     font-family: 'object-fit: cover;';
     width: 100%;
     height: 100%;
 }
-.Collection-Card-ImgGroup-Logo {
+.Collection__Card__ImgGroup__Logo {
     position: absolute;
     top: 42%;
     left: 50%;
     transform: translate( -50%, -50%);
     margin: 0 auto;
 }
-.Collection-Card-ImgGroup-Logo-Img {
+.Collection__Card__ImgGroup__Logo__Img {
     width: 120px;
     height: 120px;
     margin-bottom: 15px;
 }
-.Collection-Card-Button {
+.Collection__Card__Button {
     width: 100%;
     background-color: rgba(255, 255, 255, 0.1);
 }
 
-.Collection-Card-Ttl {
+.Collection__Card__Ttl {
     line-height: 1.4;
 }
-.Collection-Card-Year {
+.Collection__Card__Year {
     display: block;
     font-size: 30px;
 }
-.Collection-Card-Name {
+.Collection__Card__Name {
     display: block;
     font-size: 14px;
 }
 
 @media screen and (max-width: 1295px) {
-    [class*="Collection-Card"]:not([class*="Collection-Card-"]):nth-child(3n+1) {
+    [class*="Collection__Card"]:not([class*="Collection__Card__"]):nth-child(3n+1) {
         margin-left: 0;
     }
 }
 @media screen and (max-width: 768px) {
-    .Collection-Card-Number{
+    .Collection__Card__Number{
         font-size: 30px;
     }
-    .Collection-Card-Ttl-RiderName {
+    .Collection__Card__Ttl__RiderName {
         font-size: 12px;
     }
-    [class*="Collection-Card"]:not([class*="Collection-Card-"]):not(:nth-child(4n-3)) {
+    [class*="Collection__Card"]:not([class*="Collection__Card__"]):not(:nth-child(4n-3)) {
         margin-left: 0;
     }
     .Collection{
         margin-right: 0;
     }
-    .Collection-Card-Ttl {
+    .Collection__Card__Ttl {
         line-height: 1.3;
     }
-    .Collection-Card-Button {
+    .Collection__Card__Button {
         margin-bottom: 10px;
     }
-    [class*="Collection-Card"]:not([class*="Collection-Card-"]) {
+    [class*="Collection__Card"]:not([class*="Collection__Card__"]) {
         width: 49%;
         margin-right: 2%;
         margin-bottom: 5px;
     }
-    [class*="Collection-Card"]:not([class*="Collection-Card-"]):nth-child(2n) {
+    [class*="Collection__Card"]:not([class*="Collection__Card__"]):nth-child(2n) {
         margin-right: 0;
     }
-    .Collection-Card-ImgGroup {
+    .Collection__Card__ImgGroup {
         margin-bottom: 10px;
         padding-bottom: 135%;
         width: 100%;
         height: auto;
     }
-    .Collection-Card-Img{
+    .Collection__Card__Img{
         position: absolute;
     }
-    .Collection-Card-ImgGroup-Logo {
+    .Collection__Card__ImgGroup__Logo {
         top: 50%;
         width: 100%;
     }
-    .Collection-Card-ImgGroup-Logo-Img {
+    .Collection__Card__ImgGroup__Logo__Img {
         width: 52px;
         height: 52px;
         margin-right: 20px;
         margin-bottom: 0;
     }
 
-    .Collection-Card-Year {
+    .Collection__Card__Year {
         font-size: 24px;
     }
 
-    .Collection-Card-Name {
+    .Collection__Card__Name {
         font-size: 12px;
     }
 }
@@ -146,26 +170,26 @@ body::before {
 /* ====================
 Heading
 ==================== */
-.p-collection .c-heading-sub {
+.p-collection .c-heading--sub {
     margin-bottom: 30px;
 }
 
 /* ====================
- Collection-Card-heisei
+ Collection__Card--heisei
 ==================== */
 
-.Collection-Card-heisei h1 {
+.Collection__Card--heisei h1 {
     white-space: nowrap;
 }
 @media screen and (max-width: 768px) {
-    .Collection-Card-heisei {
+    .Collection__Card--heisei {
         width: 100% !important;
         margin: 10px 0 10px;
     }
-    .Collection-Card-heisei .Collection-Card-Ttl {
+    .Collection__Card--heisei .Collection__Card__Ttl {
         display: none;
     }
-    .Collection-Card-heisei .Collection-Card-ImgGroup {
+    .Collection__Card--heisei .Collection__Card__ImgGroup {
         height: 72px;
     }
 }
@@ -173,13 +197,13 @@ Heading
 /* ====================
  hover
 ==================== */
-.Collection-reiwa {
+.Collection__reiwa {
     counter-reset: count-reiwa 4;
 }
-.Collection-heisei {
+.Collection__heisei {
     counter-reset: count-heisei 21;
 }
-.Collection-showa {
+.Collection__showa {
     counter-reset: count-showa 14;
 }
 
@@ -187,7 +211,7 @@ Heading
 Grid
 ==================== */
 
-.p-collection-grid {
+.p-collection__grid {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: minmax(100px, auto);
@@ -195,13 +219,13 @@ Grid
 }
 
 @media screen and (max-width: 1200px) {
-    .p-collection-grid {
+    .p-collection__grid {
         grid-template-columns: repeat(3, 1fr);
     }
     
 }
 @media screen and (max-width: 768px) {
-    .p-collection-grid {
+    .p-collection__grid {
         display: flex;
         flex-wrap: wrap;
         gap: 25px 0;
@@ -212,13 +236,13 @@ Grid
 Margin
 ==================== */
 @media screen and (max-width: 768px) {
-    .Collection-reiwa,
-    .Collection-heisei{
+    .Collection__reiwa,
+    .Collection__heisei{
         margin-bottom: 20px;
     }   
 }
 
-[class*="Collection-Card"] .Collection-Card-ImgGroup:after {
+[class*="Collection__Card"] .Collection__Card__ImgGroup:after {
     content: "";
     position: absolute;
     display: block;
@@ -230,8 +254,10 @@ Margin
     opacity: 0;
     pointer-events: none;
 }
-[class*="Collection-Card"] .Collection-Card-ImgGroup:before {
+[class*="Collection__Card"] .Collection__Card__ImgGroup:before {
     position: absolute;
+    /* width: 100%; */
+    /* height: 100%; */
     padding: 10px 0;
     left: 50%;
     top: 48%;
@@ -249,44 +275,44 @@ Margin
     pointer-events: none;
 }
 
-.Collection-reiwa .Collection-Card-ImgGroup:before {
+.Collection__reiwa .Collection__Card__ImgGroup:before {
     counter-increment: count-reiwa -1;
     content: counter(count-reiwa, decimal-leading-zero);
     color: rgba( 0, 191, 255, .6 );
 }
-.Collection-heisei .Collection-Card-ImgGroup:before {
+.Collection__heisei .Collection__Card__ImgGroup:before {
     counter-increment: count-heisei -1;
     content: counter(count-heisei, decimal-leading-zero);
     color: rgba(168, 149, 21, 0.6);
 }
-.Collection-showa .Collection-Card-ImgGroup:before {
+.Collection__showa .Collection__Card__ImgGroup:before {
     counter-increment: count-showa -1;
     content: counter(count-showa, decimal-leading-zero);
     color: rgba(255, 0, 0, 0.6);
 }
 
-[class*="Collection-Card"][class*="-double"] .Collection-Card-ImgGroup:before {
+[class*="Collection__Card"][class*="--double"] .Collection__Card__ImgGroup:before {
     letter-spacing: 0.1em
 }
-[class*="Collection-Card"][class*="-kiva"] .Collection-Card-ImgGroup:before,
-[class*="Collection-Card"][class*="-den-o"] .Collection-Card-ImgGroup:before,
-[class*="Collection-Card"][class*="-kabuto"] .Collection-Card-ImgGroup:before,
-[class*="Collection-Card"][class*="-hibiki"] .Collection-Card-ImgGroup:before,
-[class*="Collection-Card"][class*="-brade"] .Collection-Card-ImgGroup:before,
-[class*="Collection-Card"][class*="-555"] .Collection-Card-ImgGroup:before {
+[class*="Collection__Card"][class*="--kiva"] .Collection__Card__ImgGroup:before,
+[class*="Collection__Card"][class*="--den-o"] .Collection__Card__ImgGroup:before,
+[class*="Collection__Card"][class*="--kabuto"] .Collection__Card__ImgGroup:before,
+[class*="Collection__Card"][class*="--hibiki"] .Collection__Card__ImgGroup:before,
+[class*="Collection__Card"][class*="--brade"] .Collection__Card__ImgGroup:before,
+[class*="Collection__Card"][class*="--555"] .Collection__Card__ImgGroup:before {
     font-size: 300px;
     left: 51%;
     top: 47%;
     letter-spacing: 0.03em;
 }
-[class*="Collection-Card"][class*="-ryuki"] .Collection-Card-ImgGroup:before,
-[class*="Collection-Card"][class*="-agito"] .Collection-Card-ImgGroup:before {
+[class*="Collection__Card"][class*="--ryuki"] .Collection__Card__ImgGroup:before,
+[class*="Collection__Card"][class*="--agito"] .Collection__Card__ImgGroup:before {
     font-size: 300px;
     left: 51%;
     top: 47%;
     letter-spacing: -0.03em;
 }
-[class*="Collection-Card"][class*="-kuuga"] .Collection-Card-ImgGroup:before {
+[class*="Collection__Card"][class*="--kuuga"] .Collection__Card__ImgGroup:before {
     font-size: 300px;
     left: 51%;
     top: 47%;
@@ -295,11 +321,11 @@ Margin
 
 /* hover */
 @media screen and (min-width: 769px) {
-    .Collection-Card-ImgGroup:hover {
+    .Collection__Card__ImgGroup:hover {
         overflow: hidden;
     }
-    [class*="Collection-Card"]:not([class*="-heisei"]) .Collection-Card-ImgGroup:hover:before,
-    [class*="Collection-Card"]:not([class*="-heisei"]) .Collection-Card-ImgGroup:hover:after {
+    [class*="Collection__Card"]:not([class*="--heisei"]) .Collection__Card__ImgGroup:hover:before,
+    [class*="Collection__Card"]:not([class*="--heisei"]) .Collection__Card__ImgGroup:hover:after {
         opacity: 1;
     }
 }
