--- a/static/css/kr.css
+++ b/static/css/kr.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 body::before {
-    background: url(/static/img/kr/bg-50th-sp@3x.png) no-repeat center;
+    background: url(/static/img/kr/common/bg-50th-sp@3x.png) no-repeat center;
     background-size: cover;
     content: "";
     display: block;
@@ -14,7 +14,7 @@ body::before {
 }
 @media screen and (min-width: 1024px) {
 	body::before {
-		background-image: url(/static/img/kr/bg-50th-pc.svg);
+		background-image: url(/static/img/kr/common/bg-50th-pc.svg);
 		background-repeat: no-repeat;
 		background-size: cover;
 		background-position: center;
@@ -49,6 +49,38 @@ body::before {
  Collection
 ==================== */
 
+.c-heading--sub::before {
+    content: "";
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url(/static/img/kr/common/heading-bg-pc.svg);
+    background-position: center;
+}
+.c-heading--sub.is-orange {
+    color: #eb740e;
+}
+@media all and (min-width: 1024px){
+    .c-heading--sub {
+	font-size:32px;
+    }
+}
+.c-heading--sub {
+    position: relative;
+    width: 100%;
+    font-size: 28px;
+    text-align: center;
+    border-radius: 10px;
+    color: #fff;
+    background-color: #000;
+}
+.c-heading--sub span {
+    position: relative;
+    z-index: 2;
+}
 [class*="Collection__Card"]:not([class*="Collection__Card__"]) {
     position: relative;
     width: 211px;
