--- a/static/css/kr.css
+++ b/static/css/kr.css
@@ -33,7 +33,30 @@ body::before {
 /* ====================
  Collection
 ==================== */
-
+.p-group--header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.p-group--header+* {
+    margin-top: 32px;
+}
+.p-group--header>* {
+    margin-top: 0;
+}
+.c-heading.is-orange {
+    background-image: url(/static/img/kr/common/title-orange-sp.svg);
+}
+.c-heading {
+    width: 100%;
+    font-size: 24px;
+    text-align: center;
+    color: #fff;
+    text-shadow: 0px 3px 0px rgb(38 33 41 / 16%);
+    background-repeat: no-repeat;
+    background-position: center;
+}
 .c-heading--sub::before {
     content: "";
     position: absolute;
@@ -48,7 +71,16 @@ body::before {
 .c-heading--sub.is-orange {
     color: #eb740e;
 }
-@media all and (min-width: 1024px){
+@media all and (min-width: 1024px) {
+    .p-group--header>.c-heading {
+        width: 620px;
+    }
+    .c-heading {
+        font-size: 36px;
+    }
+    .c-heading.is-orange {
+        background-image: url(/static/img/kr/common/title-orange-pc.svg);
+    }
     .c-heading--sub {
 	font-size:32px;
     }
