--- a/_layouts/mypost.html
+++ b/_layouts/mypost.html
@@ -22,9 +22,10 @@
     {% if page.enableComments %}
     {% include gitalk.html -%}
     {% endif %}
-    {% include footer.html -%}
   </div>
+  <div style="clear: both;"></div>
 </div>
+{% include footer.html -%}
 {% include script.html -%}
 </body>
 </html>
