--- a/static/css/common.css
+++ b/static/css/common.css
@@ -114,7 +114,7 @@ input:-webkit-autofill {
   width: 80px;
   height: 80px;
   cursor: pointer;
-  border-radius: 50%;
+  border-radius: 0.3em;
   flex-shrink: 0;
   margin-right: 10px;
   user-select: none;
